# product-repo

./: README.MD  pyproject.toml  requirements.txt
product_repository/: .env  db.sqlite3  manage.py
product_repository/api/: models.py  serializers.py  tasks.py  views.py
product_repository/api/migrations/: 0001_initial.py
product_repository/product_repository/: asgi.py  celery.py  db.sqlite3  urls.py  wsgi.py
product_repository/product_repository/settings/: dev.py  prod.py
